# oorouter

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html  package.json  skills-lock.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  wdio.conf.ts
.cargo/: config.toml
.github/workflows/: release.yml
.sisyphus/evidence/: task-2-spike-result.md  task-9-converter.txt
crates/proxy-core/: Cargo.toml
crates/proxy-core/.sqlx/: query-0000a8588cd3e3d8c02c040b7972216f9ed8b64e0e3d76b47a89bded0af9a7c8.json  query-0324ee22c0437cdfe3e00e2c103207e29d4e0fad593e3b385603c6f2117c8097.json  query-c03c93db41667371239da81e183d9a80ffc08b432b2cec82206b74b3f4b9a89e.json  query-c5bb32842682379beb128f7f22887f02b47feeef3244283db30f66eb5cf8b628.json
crates/proxy-core/examples/: spike_reqwest.rs
crates/proxy-core/src/: auth.rs  auth_watcher.rs  client.rs  client_auth.rs  client_auth_store.rs  config.rs  converter.rs  db.rs  error.rs  lib.rs  logger.rs  models.rs  openai_streaming.rs  server_args.rs  streaming.rs  usage.rs
crates/proxy-core/src/routes/: chat.rs  generate.rs  logs.rs  mod.rs  openai.rs  show.rs  stubs.rs  tags.rs  usage_stats.rs
crates/proxy-core/src/types/: codex.rs  mod.rs  ollama.rs  openai.rs
crates/proxy-core/tests/: server_args.rs
crates/proxy-core/tests/integration/: mod.rs
docker/: entrypoint.sh
migrations/: 001_initial.sql  002_client_api_auth.sql
scripts/: sync-version.mjs  verify-updater-release.mjs
src/: App.tsx  app.ts  auth.ts  config.ts  index.css  index.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: client_auth.rs  commands.rs  lib.rs  main.rs  state.rs
src/components/: Layout.tsx  UpdateBanner.tsx
src/components/ui/: dialog.tsx  input.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx
src/lib/: tauri.ts  use-theme.ts
src/pages/: Auth.tsx  Home.tsx  Logs.tsx  Models.tsx  Settings.tsx  TokenUsage.tsx
src/plugins/: health.ts  logger.ts  ollama.ts  openai.ts
src/providers/: factory.ts  types.ts
src/providers/codex/: adapter.ts  client.ts  converter.ts  models.ts  openai-streaming.ts  streaming.ts  types.ts
src/routes/: chat.ts  generate.ts  openai-compat.ts
src/types/: ollama.ts  openai.ts
src/utils/: metrics.ts
tests/: auth.test.ts  config.test.ts
tests/codex/: client.test.ts  converter.test.ts  models.test.ts  openai-streaming.test.ts  streaming.test.ts
tests/e2e/: tauri-embedded.spec.ts  tauri-restart.e2e.ts
tests/integration/: server.test.ts
tests/routes/: chat.test.ts  generate.test.ts  openai-compat.test.ts
ui/: package.json  vite.config.ts
ui/src/: App.tsx  index.css
(+6 files in other folders)
