[package]
name = "oorouter"
version = "1.2.1"
edition = "2021"

[lib]
name = "oorouter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-wdio = "1"
tauri-plugin-wdio-webdriver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
proxy-core = { path = "../crates/proxy-core" }
axum = "0.7"
tracing = { workspace = true }
url = "2"

[dev-dependencies]
sqlx = { workspace = true }
tempfile = { workspace = true }
